--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ access_log
 # ========================================================== #
 plugins/*
 !plugins/sgsc-functionality/
+!plugins/latest-gallery-widget/
 
 # Ignore everything in "themes" except the active theme. #
 # ====================================================== #
